[package]
name = "advent"
version = "0.1.0"
authors = ["Valentine Briese <valentinegb@icloud.com>"]
edition = "2021"
description = "A command for running advent of code puzzles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
