[package]
name = "advent-proc-macros"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = "2.0.38"
